refactor: routes, remove auth web routes, updated namespace
