# storage/api-docs/api-docs.json
@@ -13,7 +13,7 @@
         "version": "1.0.0"
     },
     "paths": {
-        "/v1/login": {
+        "/api/v1/login": {
             "post": {
                 "tags": [
                     "Authentication"
@@ -264,7 +264,7 @@
                 }
             }
         },
-        "/v1/logout": {
+        "/api/v1/logout": {
             "post": {
                 "tags": [
                     "Authentication"
